--- a/latex/resume-cv/pt-br/FernandoOliveiraLima_cv1_br.tex
+++ b/latex/resume-cv/pt-br/FernandoOliveiraLima_cv1_br.tex
@@ -70,6 +70,7 @@ Espanhol Básico
 \item Git, Gitlab, Github, SourceTree
 \item Desenvolvimento de Android apps
 \item KiCAD, Eagle
+\item Espressif, Arduino, Sistemas Embarcados
 \item Photoshop, Lightroom
 \end{itemize}
 
@@ -78,11 +79,11 @@ Espanhol Básico
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
-\section{Sobre Mim}
+\section{Perfil}
 
 Experiente em desenvolvimento de Software e Hardware, com atuações nas áreas de Internet das Coisas, Web, Processamento de Imagem entre outras, além de possuir interesse em Machine Learning e Blockchain, Processamento de Imagem e dados, Web.
 
-Possui projetos pessoais envolvendo ferramentas de Internet das Coisas, embarcados e Aplicações Web, implementados utilizando ferramentas atuais como Node.js e interfaces em Angular,React.
+Possui projetos pessoais envolvendo ferramentas de Internet das Coisas, embarcados e Aplicações Web, implementados utilizando ferramentas  como Node.js e interfaces em Angular,React.
 
 \section{Educação}
 
@@ -92,9 +93,9 @@ Possui projetos pessoais envolvendo ferramentas de Internet das Coisas, embarcad
 
 \entry
 {03/2012--10/2018}
-{\hspace{.25cm} Bacharelado em Engenharia Elétrica - Sistemas Eletrônicos (Incompleto)}
+{\hspace{.25cm} Bacharelado em Engenharia Elétrica - Sistemas Eletrônicos}
 {\\Universidade do Estado do Rio de Janeiro (UERJ), Rio de Janeiro, Brasil}
-{Espera-se Graduar em: 10/2018 \\ \color{red}{CR = 7.85/10.0} }
+{Graduado em: 10/2018 \\ \color{red}{CR = 7.85/10.0} }
 
 %------------------------------------------------
 
@@ -198,6 +199,7 @@ Trabalhou como técnico no PROSAICO (Processamento de Sinais , Inteligência Apl
 \item Ionic
 \item React
 \item Full Stack Development
+\item Blockchain
 \end{itemize}}
 
 \entry
@@ -227,10 +229,10 @@ Trabalhou como técnico no PROSAICO (Processamento de Sinais , Inteligência Apl
 
 
 \entry
-{08/2018 --10/2018}
-{\hspace{.15cm} Organizador da VI Semana de Engenharia Elétrica }
+{22/2018 --26/2018}
+{\hspace{.15cm} Coordenador Geral da VI Semana de Engenharia Elétrica }
 {Universidade do Estado do Rio de Janeiro}
-{Uma semana de Palestras e Mini-cursos nas áreas de Engenharia Elétrica e Computação dos dias 08/10 a 12/10 em 2018.}
+{Uma semana de Palestras e Mini-cursos nas áreas de Engenharia Elétrica e Computação dos dias 22/10 a 26/10 em 2018.}
 
 
 
