--- a/latex/resume-cv/english/FernandoOliveiraLima_cv1.tex
+++ b/latex/resume-cv/english/FernandoOliveiraLima_cv1.tex
@@ -28,7 +28,7 @@
 
 \begin{document}
 
-\header{\huge{Fernando}}{\huge{ de \color{white}{Oliveira Lima}}}{IEEE Membership: 92248463 / Universidade do Estado do Rio de Janeiro /CR:7.8/10} % Your name and current job title/field
+\header{\huge{Fernando}}{\huge{ de \color{white}{Oliveira Lima}}}{Software/Hardware Developer | Electrical Engineer} % Your name and current job title/field
 
 
 \vspace{1cm}
@@ -39,29 +39,42 @@
  
 \begin{aside} % In the aside, each new line forces a line break
 \section{Contact}
-Haroldo Cavalcanti, 455, apt 302
+Luis Inglesias, 120, apt 108
 Rio de Janeiro, RJ
-22795-240
-~
+22795--060
 (21) 98821-4779
-~
-\href{mailto:fol2111@gmail.com}{fol2111@gmail.com}
 \href{mailto:folivelima@gmail.com}{folivelima@gmail.com}
-\href{http://facebook.com/fernando.oliveira.1023}{fb://fernando.oliveira}
+\href{https://www.linkedin.com/in/fernando-lima-47673263/}{in://fernando.oliveira}
+\href{https://github.com/fol21}{github/fol21}
 \section{Languages}
-Portuguese mother tongue
-English fluency
+Fluent English
+Fluent Portuguese
 Basic Spanish
-\section{Programming}
-Python, C/C++, MATLAB
-Java, Latex, Pascal  
-CSS \& HTML
-\section{Computer Skills}
-Linux OS, Microsoft OS,
-Android Development
-Microsoft Office
-Multisim, Proteus Simulators
+\section{Code}
+\item Node.js, Javascript
+\item Typescript
+\item C/C++
+\item Python
+\item Angular, Ionic, React
+\item C\# /.NET, .NET Core
+\item Java, Spring
+\item HTML5,CSS3, SCSS
+\section{Tools}
+\item Linux \& Microsoft
+\item Azure, Google Cloud, IBM Cloud
+\item Git, Gitlab, Github, SourceTree
+\item Desenvolvimento de Android apps
+\item KiCAD, Eagle
+\item Espressif, Arduino, Sistemas Embarcados
+\item Photoshop, Lightroom
 \end{aside}
+
+
+\section{Profile}
+
+Experienced in Software and Hardware development, with activities in the areas of Internet of Things, Web dev, Software, Image Processing among others, besides having interest in Machine Learning and Blockchain, Image and Data Processing, Web.
+
+Has personal projects involving Internet tools of Things, embedded and Web Applications, implemented using tools like Node.js and interfaces in Angular, React.
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -74,10 +87,10 @@ Multisim, Proteus Simulators
 %------------------------------------------------
 
 \entry
-{03/2012--Present}
-{\hspace{.25cm} Bachelor of Science in Electrical Engineering (INCOMPLETE)}
+{03/2012--10/2018}
+{\hspace{.25cm} Bachelor of Science in Electrical Engineering}
 {\\Universidade do Estado do Rio de Janeiro (UERJ), Rio de Janeiro, Brazil}
-{Current undergraduate student in Rio de Janeiro ,Brazil. \\ Expected Graduation: 06/2018 \\ \color{red}{CR = 7.8/10} }
+{Graduated  in Rio de Janeiro ,Brazil.  \\ \color{red}{CR = 7.8/10} }
 
 %------------------------------------------------
 
@@ -101,6 +114,20 @@ Multisim, Proteus Simulators
 \begin{entrylist}
 
 %------------------------------------------------
+
+\entry
+{10/2018--}
+{\hspace{.15cm} Radix Engenharia e Software}
+{Rio de Janeiro, Brasil}
+{Trainee \\
+Works in Software projects and web systems. Using Node.js, Angular, C ++, C \ #, Java, Python, among others.}
+
+\entry
+{11/2016--10/2018}
+{\hspace{.15cm} Radix Engenharia e Software}
+{Rio de Janeiro, Brasil}
+{Intern \\
+Worked in innovation projects and web systems, IoT and Cognitive Computing. Using Node.js, Angular, C ++, C \ #, Java, Python, among others.}
 
 \entry
 {06/2016--08/2016}
@@ -141,6 +168,8 @@ Worked as a technician in PROSAICO (Processing of Signals,Applied Intelligence a
 
 %------------------------------------------------
 
+
+
 \entry
 {01/2014 -- Present}
 {\hspace{.15cm}Founder of UERJBotz Robotics team}
@@ -159,9 +188,52 @@ Worked as a technician in PROSAICO (Processing of Signals,Applied Intelligence a
 {Coursera, Georgia Institute of Technology}
 {Completed the online course about control theory applied to mobile robots.}
 
+\entry
+{01/2017}
+{\hspace{.15cm}Certificados na Udemy}
+{Udemy}
+{\begin{itemize}
+\item Advanced C++
+\item C#
+\item C++ Concurrency
+\item Node.js
+\item Angular
+\item Ionic
+\item React, React-Native
+\item Full Stack Development, TDD
+\item Blockchain
+\end{itemize}}
 
+\entry
+{07/2017 -- }
+{\hspace{.15cm} Chair of  IEEE UERJ Student Branch}
+{Universidade do Estado do Rio de Janeiro}
+{A Student Branch is an IEEE related initiative of Students for projects in the area of ​​Engineering (mainly Electrical and Computing) for professional development and Projects of Innovation and learning.
+}
 
+\entry
+{22/2018 --26/2018}
+{\hspace{.15cm} Chief Coordinator of VI Electrical Engineering Week }
+{Universidade do Estado do Rio de Janeiro}
+{A Week of presentations and courses in the areas of Power, Electronics and Software. Happened between  22/10 -- 26/10/ 2018.}
 
+\entry
+{01/2018}
+{\hspace{.15cm}Hackton Stefanini, competidor}
+{}
+{WINNER OF Hackton da Stefanini . Developer.}
+
+\entry
+{03/2018 }
+{\hspace{.15cm}Hackton Rio2C, competidor}
+{}
+{Finalist of Hackton Rio2C. Developer.}
+
+\entry
+{04/2018 }
+{\hspace{.15cm}Hackton Globo, competidor}
+{}
+{Competitor of Hackton Globo . Developer.}
 
 
 %------------------------------------------------
