--- a/latex/resume-cv/pt-br/FernandoOliveiraLima_cv1_br.tex
+++ b/latex/resume-cv/pt-br/FernandoOliveiraLima_cv1_br.tex
@@ -28,7 +28,7 @@
 
 \begin{document}
 
-\header{\huge{Fernando}}{\huge{ de \color{white}{Oliveira Lima}}}{Desenvolvedor } % Your name and current job title/field
+\header{\huge{Fernando}}{\huge{ de \color{white}{Oliveira Lima}}}{Software/Hardware Developer | Engenheiro Eletrônico } % Your name and current job title/field
 
 
 \vspace{0.5cm}
@@ -76,14 +76,16 @@ Espanhol Básico
 
 \end{aside}
 
-%----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
+
 \section{Perfil}
 
 Experiente em desenvolvimento de Software e Hardware, com atuações nas áreas de Internet das Coisas, Web, Processamento de Imagem entre outras, além de possuir interesse em Machine Learning e Blockchain, Processamento de Imagem e dados, Web.
 
 Possui projetos pessoais envolvendo ferramentas de Internet das Coisas, embarcados e Aplicações Web, implementados utilizando ferramentas  como Node.js e interfaces em Angular,React.
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION SECTION
+%----------------------------------------------------------------------------------------
 
 \section{Educação}
 
@@ -122,7 +124,14 @@ Possui projetos pessoais envolvendo ferramentas de Internet das Coisas, embarcad
 
 
 \entry
-{11/2016--}
+{10/2018--}
+{\hspace{.15cm} Radix Engenharia e Software}
+{Rio de Janeiro, Brasil}
+{Estagiário de Desenvolvimento/Desenvolvedor \\
+Trabalhou em projetos de software e sistemas web, IoT. Utilizando Node.js, Angular, C++, C\#, Java, Python, entre outras.}
+
+\entry
+{11/2016--10/2018}
 {\hspace{.15cm} Radix Engenharia e Software}
 {Rio de Janeiro, Brasil}
 {Estagiário de Desenvolvimento/Desenvolvedor \\
@@ -133,7 +142,7 @@ Trabalhou em projetos de inovação e sistemas web, IoT e de Computação Cognit
 {\hspace{.15cm} University of California, San Diego}
 {San Diego, EUA}
 {Intercâmbio de pesquisa \\
-Participou de um projeto de pesquisa na área de Processamento de imagem e desenvolivmento mobile para monitoramento de incisões cirúrgicas, durante o período de verão na UCSD.}
+Participou de um projeto de pesquisa na área de Processamento de imagem e desenvolvimento mobile para monitoramento de incisões cirúrgicas, durante o período de verão na UCSD.}
 
 \entry
 {08/2013--08/2015}
@@ -188,7 +197,7 @@ Trabalhou como técnico no PROSAICO (Processamento de Sinais , Inteligência Apl
 
 \entry
 {01/2017}
-{\hspace{.15cm}Cursos na Udemy}
+{\hspace{.15cm}Certificados na Udemy}
 {Udemy}
 {\begin{itemize}
 \item Advanced C++
@@ -197,8 +206,8 @@ Trabalhou como técnico no PROSAICO (Processamento de Sinais , Inteligência Apl
 \item Node.js
 \item Angular
 \item Ionic
-\item React
-\item Full Stack Development
+\item React, React-Native
+\item Full Stack Development, TDD
 \item Blockchain
 \end{itemize}}
 
@@ -206,7 +215,7 @@ Trabalhou como técnico no PROSAICO (Processamento de Sinais , Inteligência Apl
 {07/2017 -- }
 {\hspace{.15cm} Presidente do Ramo Estudantil IEEE UERJ}
 {Universidade do Estado do Rio de Janeiro}
-{O Ramo é uma iniciativa de Alunos para projetos na área de Engenharia (principalmente Elétrica e Computação) para desenvolvimento profissional e Projetos de Inovação e aprendizagem.}
+{O Ramo é uma iniciativa de Alunos com o IEEE para projetos na área de Engenharia (principalmente Elétrica e Computação) para desenvolvimento profissional e Projetos de Inovação e aprendizagem.}
 
 \entry
 {01/2018}
